dark mode single fixed

--- a/public/styles/_breakpoints.scss
+++ b/public/styles/_breakpoints.scss
@@ -191,7 +191,9 @@
 
     // Single 
     .body-single {
-        @include container1000;
+        > div > div {
+            @include container1000;
+        }
 
         .sec {
             height: 100%;
@@ -200,6 +202,7 @@
 
         footer {
             margin: 0px;
+            padding: 0px 0px 20px 0px;
         }
     }
 
