--- a/public/styles/_single.scss
+++ b/public/styles/_single.scss
@@ -1,6 +1,7 @@
 .body-single {
     footer {
-        margin: 50px;
+        padding: 50px;
+        margin: 0px;
         background-color: transparent;
     }
 }
